1.9.3:
* Lib: "chain.BlockTreeEnd" is now only accessible through multi-thread protected methods LastBlock() and SetLast()
* Client: Added network.CompactBlocksMutex to prevent data race
* Client/WebUI/MakeTx: For privacy, randomly modify the default SPB by up to +/- 10%
* Client/WebUI/Network: Allows to edit "friends.txt" file
* Client: Data is being written to peer TCP connections from a desigated threads
* Client: And peer that you connect to manually, automatically gets marked as Special (no auto-dropping)
* Client: Automatically connect to IPs from file "friends.txt" (inside the client/ folder)
* Client/WebUI/MakeTx: Show P2SH-WPKH instead of P2KH, only if currently selected wallet contains "# Auto-translate to SegWit"
* Client/WebUI/MakeTx: Address Book shows auto calculated P2SH-WPKH Addresses from currently selected wallet
* Client: Show real endpoint's TCP port for incomming connections
* Client: Run Tick() method for each peer not more often than each 100 ms
* Client: Run SendInvs() method for each peer not more often each 10 ms
* Client: Increased size of each peer's send buffer to 16MB (so it can handle 8MB blocks)
* Client/TextUI: New command "unban"
* Client: Removed NO_DATA timeout and added NoVersionMessage timeout
* Client: Introduced a concept of "special" peers that get more debugging and never get dropped
* Lib: The best chain is now decided on the amount of POW, not the height anymore
* WebUI/Network: New option "Connect Peer", to connect to a peer with the given IP[:port]
* Lib: CheckTransactions now returns descriptive errors (e.g. "bad-txns-vin-empty")
* Client: Added 2x bigger block consensus change warning (segwit2x)
* Client/WebUI/Net: New "Freeze stats" option and manual refresh buttons
* Wallet: disallow uncompressed keys, for WPKH segwit address safety
* Client: Ignore the value of MAX_GETDATA_FORWARD when there are no blocks in progress
* MarshalText() method madded to "sys.SyncBool" and "sys.SyncInt" (fixes WebUI issue)